<resources>
    <!-- main activity strings -->
    <string name="app_name">CinemaPop</string>

    <!-- main options menu strings -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- Settings activity strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="movie_description">A movie poster goes here.</string>

    <!-- preference label strings -->
    <string name="pref_label_sortmode">Sort Mode</string>
    <string name="pref_label_genre">Genres</string>
    <string name="pref_label_cast">Buscemi Mode</string>
    <string name="pref_label_narrow_by_genre">Narrow Search By Genres?</string>
    <string name="pref_label_narrow_by_year">Select Release Year Range?</string>
    <string name="pref_label_year_range">Release Year Range</string>

    <!-- preference key strings -->
    <string name="pref_key_sortmode">sortmode</string>
    <string name="pref_key_genre">genre</string>
    <string name="pref_key_cast">cast</string>
    <string name="pref_key_narrow_by_genre">narrow</string>
    <string name="pref_key_year_range">years</string>
    <string name="pref_key_narrow_by_year">year_narrow</string>

    <!-- preference entry strings -->
        <!-- sort mode -->
    <string name="pref_entry_sortmode_pop">Most Popular</string>
    <string name="pref_entry_sortmode_rate">Highest Rated</string>
        <!-- genre selection -->
    <string name="pref_entry_genre_action">Action</string>
    <string name="pref_entry_genre_adventure">Adventure</string>
    <string name="pref_entry_genre_animation">Animation</string>
    <string name="pref_entry_genre_comedy">Comedy</string>
    <string name="pref_entry_genre_crime">Crime</string>
    <string name="pref_entry_genre_doc">Documentary</string>
    <string name="pref_entry_genre_drama">Drama</string>
    <string name="pref_entry_genre_fam">Family</string>
    <string name="pref_entry_genre_fantasy">Fantasy</string>
    <string name="pref_entry_genre_hist">History</string>
    <string name="pref_entry_genre_horror">Horror</string>
    <string name="pref_entry_genre_music">Music</string>
    <string name="pref_entry_genre_mystery">Mystery</string>
    <string name="pref_entry_genre_romance">Romance</string>
    <string name="pref_entry_genre_scifi">Sci-fi</string>
    <string name="pref_entry_genre_tv">TV Movie</string>
    <string name="pref_entry_genre_thriller">Thriller</string>
    <string name="pref_entry_genre_war">War</string>
    <string name="pref_entry_genre_western">Western</string>

    <!-- preference value strings -->
        <!-- sort mode values -->
    <string name="pref_default_sortmode">popularity.desc</string>
    <string name="pref_value_sortmode_pop">popularity.desc</string>
    <string name="pref_value_sortmode_rate">vote_average.desc</string>
        <!-- genre values -->
    <string name="pref_default_genre"></string>
    <string name="pref_value_genre_action">28</string>
    <string name="pref_value_genre_adventure">12</string>
    <string name="pref_value_genre_animation">16</string>
    <string name="pref_value_genre_comedy">35</string>
    <string name="pref_value_genre_crime">80</string>
    <string name="pref_value_genre_doc">99</string>
    <string name="pref_value_genre_drama">18</string>
    <string name="pref_value_genre_fam">10751</string>
    <string name="pref_value_genre_fantasy">14</string>
    <string name="pref_value_genre_hist">36</string>
    <string name="pref_value_genre_horror">27</string>
    <string name="pref_value_genre_music">10402</string>
    <string name="pref_value_genre_mystery">9648</string>
    <string name="pref_value_genre_romance">10749</string>
    <string name="pref_value_genre_scifi">878</string>
    <string name="pref_value_genre_tv">10770</string>
    <string name="pref_value_genre_thriller">53</string>
    <string name="pref_value_genre_war">10752</string>
    <string name="pref_value_genre_western">37</string>
        <!-- cast values -->
    <string name="pref_default_cast">0</string>
        <!-- narrow by genre values-->
    <string name="pref_default_narrow_by_genre">0</string>
        <!-- narrow by year values-->
    <string name="pref_default_narrow_by_year">0</string>

    <!-- year range dialog strings -->
    <string name="pref_dialog_year_range_title">Release Year Range</string>
    <string name="pref_year_range_from">From: </string>
    <string name="pref_year_range_to">To: </string>


    <!-- detail activity strings -->
    <string name="title_activity_detail">Detail</string>
    <string name="detail_user_rating"><b>User Rating: </b></string>
    <string name="detail_release_date"><b>Release Date: </b></string>
    <string name="detail_overview"><b>Overview: </b></string>
    <string name="detail_out_of_ten">/10</string>

</resources>

